--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -86,28 +86,7 @@
 
               <Tab fx:id="languagesTab" text="Языки">
                  <content>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <TableView fx:id="languagesTableView" prefHeight="415.0" prefWidth="657.0" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columns>
-                            <TableColumn fx:id="languagesNameColumn" prefWidth="169.0" text="Язык" />
-                            <TableColumn fx:id="languageSpokenColumn" minWidth="0.0" prefWidth="111.0" text="Разговор" />
-                              <TableColumn fx:id="languagesWrittenColumn" prefWidth="92.0" text="Письмо" />
-                              <TableColumn fx:id="languagesCostColumn" prefWidth="94.0" text="Стоимость" />
-                              <TableColumn fx:id="languagesUserColumn" prefWidth="92.0" text="Персонаж" />
-                              <TableColumn fx:id="languagesDbColumn" prefWidth="89.0" text="База" />
-                          </columns>
-                        </TableView>
-                        <Label alignment="CENTER" layoutX="7.0" layoutY="415.0" prefHeight="16.0" prefWidth="125.0" text="Язык" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="5.0" />
-                        <TextField fx:id="languageNameText" layoutY="431.0" prefHeight="26.0" prefWidth="124.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="5.0" />
-                        <ChoiceBox fx:id="languageSpokenChoiceBox" layoutX="138.0" layoutY="431.0" prefWidth="150.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="138.0" />
-                        <Label alignment="CENTER" layoutX="139.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Разговор" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="139.0" />
-                        <ChoiceBox fx:id="languageWrittenChoiceBox" layoutX="299.0" layoutY="431.0" prefWidth="150.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="299.0" />
-                        <Label alignment="CENTER" layoutX="300.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Письмо" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="300.0" />
-                        <Button fx:id="languageAddButton" disable="true" layoutX="558.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="6.0" />
-                        <TextField fx:id="languageCostText" layoutX="457.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="457.0" />
-                        <Label alignment="CENTER" layoutX="457.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="457.0" />
-                     </children></AnchorPane>
+                     <fx:include source="languages.fxml" />
                  </content>
               </Tab>
             <Tab fx:id="culturasTab" text="Культуры">
