--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -91,23 +91,7 @@
               </Tab>
             <Tab fx:id="culturasTab" text="Культуры">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <TableView fx:id="culturasTableView" prefHeight="415.0" prefWidth="657.0" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <columns>
-                              <TableColumn fx:id="culturasNameColumn" prefWidth="392.0" text="Культура" />
-                              <TableColumn fx:id="culturasCostColumn" minWidth="0.0" prefWidth="89.0" text="Стоимость" />
-                              <TableColumn fx:id="culturasUserColumn" prefWidth="81.0" text="Персонаж" />
-                              <TableColumn fx:id="culturasDbColumn" prefWidth="84.0" text="База" />
-                           </columns>
-                        </TableView>
-                        <Label alignment="CENTER" layoutX="229.0" layoutY="415.0" prefHeight="16.0" prefWidth="125.0" text="Культура" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="229.0" />
-                        <TextField fx:id="culturaNameText" layoutX="230.0" layoutY="431.0" prefHeight="26.0" prefWidth="124.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="230.0" />
-                        <Button fx:id="culturaAddButton" disable="true" layoutX="461.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="461.0" />
-                        <TextField fx:id="culturaCostText" layoutX="366.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="366.0" />
-                        <Label alignment="CENTER" layoutX="366.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="366.0" />
-                     </children>
-                  </AnchorPane>
+                   <fx:include source="culturas.fxml" />
                </content>
             </Tab>
             <Tab fx:id="equipmentTab" text="Снаряжения">
