--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -6,105 +6,121 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="621.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.gurps.generator.controller.MainWindowController">
-   <children>
-       <Label alignment="CENTER" layoutX="4.0" layoutY="97.0" prefHeight="25.0" prefWidth="192.0" text="Character Generator">
-           <font>
-               <Font name="System Bold" size="15.0" />
-           </font>
-       </Label>
-       <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-          <menus>
-              <Menu mnemonicParsing="false" text="Файл">
-                 <items>
-                     <MenuItem mnemonicParsing="false" text="Новый" />
-                     <MenuItem mnemonicParsing="false" text="Открыть" />
-                     <MenuItem mnemonicParsing="false" text="Загрузить" />
-                  <MenuItem mnemonicParsing="false" text="Выгрузить" />
-                 </items>
-              </Menu>
-            <Menu fx:id="viewMenu" mnemonicParsing="false" text="Вид" />
-              <Menu mnemonicParsing="false" text="Помощь">
-                 <items>
-                     <MenuItem mnemonicParsing="false" text="Справочник" />
-                 </items>
-              </Menu>
-          </menus>
-       </MenuBar>
-       <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0">
-          <image>
-              <Image url="@../images/gurps.jpg" />
-          </image>
-       </ImageView>
-       <TextField layoutX="216.0" layoutY="36.0" AnchorPane.rightAnchor="100.0" />
-       <MenuButton layoutX="467.0" layoutY="36.0" mnemonicParsing="false" text="Искать" AnchorPane.rightAnchor="16.0">
-           <items>
-               <MenuItem mnemonicParsing="false" text="Везде" />
-               <MenuItem mnemonicParsing="false" text="Преимущества" />
-           </items>
-       </MenuButton>
-       <TabPane fx:id="mainTabPanel" layoutX="-3.0" layoutY="125.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="99.0" tabClosingPolicy="ALL_TABS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0">
-          <tabs>
-              <Tab fx:id="paramsTab" text="Основные параметры">
-                 <content>
-                     <fx:include source="params.fxml" />
-                 </content>
-              </Tab>
-              <Tab fx:id="advantagesTab" text="Преимущества">
-                  <content>
-                      <fx:include source="advantages.fxml" />
-                  </content>
-              </Tab>
-              <Tab fx:id="disadvantagesTab" text="Недостатки">
-                 <content>
-                     <fx:include source="disadvantages.fxml" />
-                 </content>
-              </Tab>
-              <Tab fx:id="modesTab" text="Модификаторы">
-                 <content>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                 </content>
-              </Tab>
-            <Tab fx:id="skillsTab" text="Умения">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-              <Tab fx:id="techniquesTab" text="Техники">
-                 <content>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                 </content>
-              </Tab>
+<AnchorPane prefHeight="621.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ru.gurps.generator.controller.MainWindowController">
+    <children>
+        <Label alignment="CENTER" layoutX="4.0" layoutY="97.0" prefHeight="25.0" prefWidth="192.0"
+               text="Character Generator">
+            <font>
+                <Font name="System Bold" size="15.0"/>
+            </font>
+        </Label>
+        <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <menus>
+                <Menu mnemonicParsing="false" text="Файл">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Новый"/>
+                        <MenuItem mnemonicParsing="false" text="Открыть"/>
+                        <MenuItem mnemonicParsing="false" text="Загрузить"/>
+                        <MenuItem mnemonicParsing="false" text="Выгрузить"/>
+                    </items>
+                </Menu>
+                <Menu fx:id="viewMenu" mnemonicParsing="false" text="Вид"/>
+                <Menu mnemonicParsing="false" text="Помощь">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Справочник"/>
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true"
+                   AnchorPane.leftAnchor="0.0">
+            <image>
+                <Image url="@../images/gurps.jpg"/>
+            </image>
+        </ImageView>
+        <TextField layoutX="216.0" layoutY="36.0" AnchorPane.rightAnchor="100.0"/>
+        <MenuButton layoutX="467.0" layoutY="36.0" mnemonicParsing="false" text="Искать" AnchorPane.rightAnchor="16.0">
+            <items>
+                <MenuItem mnemonicParsing="false" text="Везде"/>
+                <MenuItem mnemonicParsing="false" text="Преимущества"/>
+            </items>
+        </MenuButton>
+        <TabPane fx:id="mainTabPanel" layoutX="-3.0" layoutY="125.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="99.0"
+                 tabClosingPolicy="ALL_TABS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                 AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0">
+            <tabs>
+                <Tab fx:id="paramsTab" text="Основные параметры">
+                    <content>
+                        <fx:include source="params.fxml"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="advantagesTab" text="Преимущества">
+                    <content>
+                        <fx:include source="advantages.fxml"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="disadvantagesTab" text="Недостатки">
+                    <content>
+                        <fx:include source="disadvantages.fxml"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="quirksTab" text="Причуды">
+                    <content>
+                        <fx:include source="quirks.fxml"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="modesTab" text="Модификаторы">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="skillsTab" text="Умения">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="techniquesTab" text="Техники">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                    </content>
+                </Tab>
 
 
-            <Tab fx:id="spellTab" text="Заклинания">
-               <content>
-                     <fx:include source="spells.fxml" />
-               </content>
-            </Tab>
+                <Tab fx:id="spellTab" text="Заклинания">
+                    <content>
+                        <fx:include source="spells.fxml"/>
+                    </content>
+                </Tab>
 
-
-              <Tab fx:id="languagesTab" text="Языки">
-                 <content>
-                     <fx:include source="languages.fxml" />
-                 </content>
-              </Tab>
-            <Tab fx:id="culturasTab" text="Культуры">
-               <content>
-                   <fx:include source="culturas.fxml" />
-               </content>
-            </Tab>
-            <Tab fx:id="equipmentTab" text="Снаряжения">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-          </tabs>
-       </TabPane>
-           <Label layoutX="471.0" layoutY="97.0" prefHeight="26.0" prefWidth="115.0" text="Затрачено очков" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="97.0" />
-           <Label fx:id="currentPoints" alignment="CENTER" contentDisplay="CENTER" layoutX="590.0" layoutY="97.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="49.0" text="9999" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="97.0" />
-           <Label layoutX="298.0" layoutY="97.0" prefHeight="26.0" text="Максимум очков" AnchorPane.rightAnchor="247.0" AnchorPane.topAnchor="97.0" />
-           <TextField fx:id="maxPoints" alignment="CENTER" layoutX="414.0" layoutY="97.0" prefHeight="26.0" prefWidth="39.0" AnchorPane.rightAnchor="197.0" AnchorPane.topAnchor="97.0" />
-      <Button fx:id="userSheet" layoutX="210.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="163.0" text="Перейти к листу персонажа" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="210.0" AnchorPane.topAnchor="36.0" />
-   </children>
+                <Tab fx:id="languagesTab" text="Языки">
+                    <content>
+                        <fx:include source="languages.fxml"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="culturasTab" text="Культуры">
+                    <content>
+                        <fx:include source="culturas.fxml"/>
+                    </content>
+                </Tab>
+                <Tab fx:id="equipmentTab" text="Снаряжения">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
+        <Label layoutX="471.0" layoutY="97.0" prefHeight="26.0" prefWidth="115.0" text="Затрачено очков"
+               AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="97.0"/>
+        <Label fx:id="currentPoints" alignment="CENTER" contentDisplay="CENTER" layoutX="590.0" layoutY="97.0"
+               maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="49.0"
+               text="9999" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="97.0"/>
+        <Label layoutX="298.0" layoutY="97.0" prefHeight="26.0" text="Максимум очков" AnchorPane.rightAnchor="247.0"
+               AnchorPane.topAnchor="97.0"/>
+        <TextField fx:id="maxPoints" alignment="CENTER" layoutX="414.0" layoutY="97.0" prefHeight="26.0"
+                   prefWidth="39.0" AnchorPane.rightAnchor="197.0" AnchorPane.topAnchor="97.0"/>
+        <Button fx:id="userSheet" layoutX="210.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0"
+                prefWidth="163.0" text="Перейти к листу персонажа" textAlignment="CENTER" wrapText="true"
+                AnchorPane.leftAnchor="210.0" AnchorPane.topAnchor="36.0"/>
+    </children>
 </AnchorPane>
