--- a/src/ru/gurps/generator/resources/views/select_user.fxml
+++ b/src/ru/gurps/generator/resources/views/select_user.fxml
@@ -19,5 +19,6 @@
       <TextField fx:id="points" alignment="CENTER" layoutY="27.0" prefHeight="26.0" prefWidth="219.0" promptText="Максимальное количество очков" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="88.0" AnchorPane.topAnchor="28.0" />
       <Button fx:id="load" disable="true" layoutX="299.0" layoutY="227.0" mnemonicParsing="false" text="Загрузить" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="14.0" />
       <Button fx:id="remove" disable="true" layoutX="14.0" layoutY="227.0" mnemonicParsing="false" text="Удалить" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="14.0" />
+      <Button fx:id="generate" layoutX="141.0" layoutY="227.0" mnemonicParsing="false" text="Сгенерировать" />
    </children>
 </AnchorPane>
